# relay-risk-plugins

./: README.md
.claude-plugin/: marketplace.json
plugins/ai-verify/: .gitignore  .mcp.json  README.md  pyproject.toml
plugins/ai-verify/.claude-plugin/: plugin.json
plugins/ai-verify/commands/: ai-verify.md
plugins/ai-verify/examples/: sample_output.json
plugins/ai-verify/prompts/: cowork_prompt.md
plugins/ai-verify/skills/ai-verify/: SKILL.md
plugins/ai-verify/src/ai_verify/: __init__.py  c2pa_check.py  config.py  face_mask.py  mcp_server.py  notify.py  prompt_builder.py  result_merger.py
plugins/ai-verify/tests/: test_c2pa_check.py  test_face_mask.py  test_mcp_server.py  test_prompt_builder.py  test_result_merger.py
