[project]
name = "ai-verify"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "c2pa-python>=0.6",
    "mediapipe>=0.10",
    "opencv-python>=4.8",
    "pillow>=10.0",
    "requests>=2.31",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff", "mypy"]

[project.scripts]
ai-verify-mcp = "ai_verify.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
